--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
 }
 
 .container{
-    width:70%;
+    width:1280px;
     margin:auto;
 }
 
@@ -21,8 +21,8 @@ header{
 }
 
 .profilo{
-    background-color: black;
-    width:(100px/0.3);
+    background-color: #000000;
+    width:calc(100px/0.25);
     margin-right:40px;
     margin-top:50px;
     float:left;
@@ -34,9 +34,8 @@ header{
 
 .info{
     float:left;
-    width:((100px/0.3)*0.7);
-    margin-left:10px;
-    margin-right:50px;
+    width:calc((100px/0.25)*0.5);
+    margin-left:calc((100px/0.25)*0.03);
 }
 
 .thumbn{
